--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -26,6 +26,10 @@ plugins:
 
 # Theme-specific settings
 
+locale: es_MX
+
+timezone: America/Los_Angeles
+
 # If you want to link only specific pages in your header, use this and add the path to the pages
 # in order as they should show up.
 header_pages:
@@ -52,7 +56,7 @@ minima:
   # Minima date format.
   # The default value is "%b %d, %Y" (e.g. Nov 14, 2023) 
   # Refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this.
-  #date_format: "%b-%d-%Y"
+  date_format: "%d %b, %Y"
 
   # Generate social links in footer.
   social_links:
