--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,7 +6,7 @@ author:
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
 description: >
-  Dedicados a la apreciación y el análisis, de la vida y obra del escritor y poeta Robert E Howard; creador de Conan.
+  Dedicados a la apreciación y el análisis, de la vida y obra del escritor y poeta Robert E. Howard; creador de Conan.
 
 
 
