--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,6 +30,8 @@ locale: es_MX
 
 timezone: America/Los_Angeles
 
+permalink: /:title
+
 # If you want to link only specific pages in your header, use this and add the path to the pages
 # in order as they should show up.
 header_pages:
