--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -39,6 +39,7 @@ defaults:
     values:
       image: /assets/images/default-card.png
 
+google_analytics: G-S75126STF6
 
 # If you want to link only specific pages in your header, use this and add the path to the pages
 # in order as they should show up.
