--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -74,18 +74,18 @@ minima:
   social_links:
   #  - { platform: devto,          user_url: "https://dev.to/jekyll" }
   #  - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
-    - { platform: facebook,       user_url: "https://www.facebook.com/nemediano" }
+  #  - { platform: facebook,       user_url: "https://www.facebook.com/nemediano" }
   #  - { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
-    - { platform: github,         user_url: "https://github.com/nemediano" }
-    - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=p2dAy1MAAAAJ" }
+  #  - { platform: github,         user_url: "https://github.com/nemediano" }
+  #  - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=p2dAy1MAAAAJ" }
   #  - { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
   #  - { platform: keybase,        user_url: "https://keybase.io/jekyll" }
-    - { platform: linkedin,       user_url: "https://www.linkedin.com/in/jorgegarciagalicia/" }
+  #  - { platform: linkedin,       user_url: "https://www.linkedin.com/in/jorgegarciagalicia/" }
   #  - { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
   #  - { platform: pinterest,      user_url: "https://www.pinterest.com/jekyll" }
   #  - { platform: stackoverflow,  user_url: "https://stackoverflow.com/users/1234567/jekyll" }
   #  - { platform: telegram,       user_url: "https://t.me/jekyll" }
-    - { platform: twitter,        user_url: "https://twitter.com/nemediano" }
+  #  - { platform: twitter,        user_url: "https://twitter.com/nemediano" }
   #  - { platform: x,              user_url: "https://x.com/nemediano" }
   #  - { platform: youtube,        user_url: "https://www.youtube.com/jekyll" }
 
